--- a/admin-fe/package.json
+++ b/admin-fe/package.json
@@ -17,6 +17,8 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
     "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
